Create service, RestController, Entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+exchange.app-id=3229d355c4744390ad13015c1b251acb
+# GIPHY
+giphy.url=https://api.giphy.com/v1/gifs
+giphy.api-key=dUdoN9EmdeJOJNQJ2vsqkfiEMqWbHv5l
 
+# openexchangerates.org
+openexchangerates.url=https://openexchangerates.org/api
+openexchangerates.api-key=3229d355c4744390ad13015c1b251acb
+openexchangerates.currency=USD
+
+# file path
+path-to-file=c:/temp_java/temp.gif
