--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,15 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
+apply plugin: 'java'
+apply plugin: 'idea'
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -15,7 +24,13 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'io.github.openfeign:feign-core:11.8'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.1'
+    implementation 'org.springframework.cloud:spring-cloud-dependencies:2021.0.1'
+    // https://mvnrepository.com/artifact/org.asynchttpclient/async-http-client
+    implementation group: 'org.asynchttpclient', name: 'async-http-client', version: '2.12.3'
+
+
 }
 
 tasks.named('test') {
